# StartYourProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake  docker-compose.yaml  docker-compose.yml
.github/workflows/: ci_client_features.yml
client/: CMakeLists.txt  client.cpp  client_utils.hpp  clientui.hpp  general.hpp  network.hpp  usecases.hpp  utils.hpp  validation.hpp
client/basic/: general.hpp  validation.cpp  validation.hpp
client/client/: main.cpp
client/client/include/: application_core.h  login_page.h  look_for_user.h  project_page.h  publish_post_page.h  register_page.h  user_edit_page.h  user_page.h
client/client/include/process/: general.h
client/client/src/: application_core.cpp  login_page.cpp  login_page.ui  look_for_user.cpp  look_for_user.ui  project_page.cpp  project_page.ui  publish_post_page.cpp  publish_post_page.ui  register_page.cpp  register_page.ui  user_edit_page.cpp  user_edit_page.ui  user_page.cpp  user_page.ui
client/client/src/process/: general.cpp
client/client_uc/: login_uc.hpp  register_uc.hpp  usecases.cpp  usecases.hpp
client/clientui/: clientui.hpp
client/core/: CMakeLists.txt
client/core/basic/: validation.cpp  validation.hpp
client/core/client_uc/: usecases.cpp  usecases.hpp
client/core/clientui/: clientui.hpp
client/core/network/: network.cpp  network.hpp
client/network/: client_utils.cpp  client_utils.hpp  network.cpp  network.hpp
client_test/: test_client.cpp
front_end/sign_in/: clientui.hpp  network.hpp  usecase.hpp
general_utils/: utils.hpp
lib_double/: general.hpp
libs_testing/: CMakeLists.txt  Makefile  client.cpp  login.json  server.cpp
repo_main/: LICENSE  README.md
repo_main/client_lib/: CMakeLists.txt
repo_main/client_lib/client_UI_UC/: client_ui.hpp  client_usecases.hpp
repo_main/client_lib/network/: network.hpp
repo_main/client_test/: workspace.code-workspace
server/: CMakeLists.txt  Makefile  cmake_install.cmake  handlers.hpp  main.cpp  router.hpp  server_utils.hpp  usecases.hpp  utils.h  utils.hpp
server/Server_Syp_autogen/: moc_predefs.h  mocs_compilation.cpp
server/Server_Syp_autogen/BL3K65LMA5/: moc_database.cpp  moc_database.cpp.d
server/core/: CMakeLists.txt  server_utils.hpp
server/core/handlers/: handlers.hpp  handlers.impl
server/core/idatabase/: idatabase.cpp  idatabase.hpp
server/core/inetwork/: inetwork.hpp
server/core/server_uc/: server_usecases.cpp  server_usecases.hpp
server/database/: CMakeLists.txt  database.cpp  database.h  database.hpp  dbconnection.hpp  models.cpp  models.h  models.hpp
server/database/include/: connection.hpp  database.hpp  dbconnection.hpp  models.hpp  pool.hpp
server/database/src/: connection.cpp  database.cpp  dbconnection.cpp  pool.cpp
server/handlers/: handlers.cpp  handlers.hpp
server/handles/: handlers.h  handlers.hpp
server/network/: CMakeLists.txt  dependencies.hpp  main.cpp
server/network/listener/: listener.cpp  listener.hpp
server/network/request_response/: request_response.cpp  request_response.hpp  request_response.impl
server/network/router/: router.cpp  router.hpp
server/network/server_impl/: server.cpp  server.hpp
server/router/: router.cpp  router.hpp
server/server_uc/: server_usecases.cpp  server_usecases.hpp
server/server_us/: server_usecases.h  server_usecases.hpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/test_client/: CMakeLists.txt  test_client.cpp
tests/test_server/: CMakeLists.txt  Makefile  cmake_install.cmake  test_db.cpp  test_handlers.cpp  test_router.cpp  test_usecases.cpp
