add_subdirectory(core)
# add_subdirectory(qt)

set(CLIENT_SYP_CORE_LIBRARIES ${CLIENT_SYP_CORE_LIBRARIES} PARENT_SCOPE)
set(CLIENT_SYP_CORE_INCLUDE_DIRS ${CLIENT_SYP_CORE_INCLUDE_DIRS} PARENT_SCOPE)

# set(CLIENT_SYP_QT_LIBRARIES ${CLIENT_SYP_QT_LIBRARIES} PARENT_SCOPE)
# set(CLIENT_SYP_QT_INCLUDE_DIRS ${CLIENT_SYP_QT_INCLUDE_DIRS} PARENT_SCOPE)
