add_subdirectory(core)
add_subdirectory(database)
add_subdirectory(network)

set(SERVER_SYP_CORE_LIBRARIES ${SERVER_SYP_CORE_LIBRARIES} PARENT_SCOPE)
set(SERVER_SYP_CORE_INCLUDE_DIRS ${SERVER_SYP_CORE_INCLUDE_DIRS} PARENT_SCOPE)

set(SERVER_SYP_NETWORK_LIBRARIES ${SERVER_SYP_NETWORK_LIBRARIES} PARENT_SCOPE)
set(SERVER_SYP_NETWORK_INCLUDE_DIRS ${SERVER_SYP_NETWORK_INCLUDE_DIRS} PARENT_SCOPE)

set(SERVER_SYP_DATABASE_LIBRARIES ${SERVER_SYP_DATABASE_LIBRARIES} PARENT_SCOPE)
set(SERVER_SYP_DATABASE_INCLUDE_DIRS ${SERVER_SYP_DATABASE_INCLUDE_DIRS} PARENT_SCOPE)