cmake_minimum_required(VERSION 3.16)
project(client_lib)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC {INCLUDE_DIR})

set(CLIENT_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(CLIENT_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
